Ctrl/Alt+Enter shouldn't insert newline

Before CL Ctrl/Alt+Enter will insert newline on Mac and Android, but
won't insert newline on Windows and Linux (https://crbug.com/608447).

According to discussion Ctrl+Enter often gets used as shortcuts
in many apps such as sending emails on Gmail web, and it
shouldn't do the same thing as Enter.

Currently Safari will insert newline, Edge won't, Firefox won't insert
newline on all platforms. We match Firefox.

BUG=604814

Review-Url: https://codereview.chromium.org/1942683004
Cr-Commit-Position: refs/heads/master@{#392566}

Former-commit-id: afecfc0cc941ff50487fd9f8010facbcaf67578e